--- a/public/thanks.html
+++ b/public/thanks.html
@@ -1,13 +1,18 @@
-<!-- public/submit.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Form Submission</title>
+  <title>Thank you from Taft Hill Acres | Fort Collins Boarding Facility</title>
+  <link rel="stylesheet" href="styles/tailwind.css">
 </head>
 <body>
-  <h1>Thank you for your submission!</h1>
-  <p>We have received your form submission and will get back to you soon.</p>
+  <div class="w-5/6 lg:w-1/2 bg-tan mx-auto p-8">
+    <h2 class="text-green text-5xl text-center mb-4">Thank You!</h2>
+    <h3 class="text-darktan text-2xl">We appreciate your message.</h3>
+  </div>
+  <div class="w-1/2 mx-auto">
+    <img class="w-full" src="images/Wyatt.jpg" alt="Thank You Image">
+  </div>
 </body>
 </html>
