--- a/public/thanks.html
+++ b/public/thanks.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thank you from Taft Hill Acres | Fort Collins Boarding Facility</title>
-  <link rel="stylesheet" href="styles/tailwind.css">
+  <link rel="stylesheet" href="/styles/tailwind.css">
 </head>
 <body>
   <div class="w-5/6 lg:w-1/2 bg-tan mx-auto p-8">
